syntax = "proto3";

package l8business;

option java_multiple_files = true;
option java_outer_classname = "L8Business";
option java_package = "com.l8business.types";
option go_package = "/types/l8business";

// Metadata contains information about the data source and collection
message L8Metadata {
  string source = 1;
  string downloaded_at = 2;
  int32 total_businesses = 3;
  repeated string cities = 4;
  map<string, int32> breakdown = 5;
  string description = 6;
}

message L8BusinessList {
  repeated L8Business list = 1;
  map<string, int32> stats = 2;
}

// Business represents a small business entity
message L8Business {
  string source = 1;
  string name = 2;
  string owner = 3;
  string address = 4;
  string city = 5;
  string state = 6;
  string zip = 7;
  string phone = 8;
  string start_date = 9;
  string end_date = 10;
  string certificate_number = 11;
  string tax_id = 12;
  string segment = 13;
}

// BusinessData is the root message containing all businesses and metadata
message L8BusinessData {
  L8Metadata metadata = 1;
  repeated L8Business businesses = 2;
}
